[package]
name    = "iconv"
description = "iconv bindings for Rust"
version = "0.0.2"
authors = [ "ShuYu Wang <andelf@gmail.com>" ]
repository = "https://github.com/andelf/rust-iconv"
license = "MIT"
keywords = ["iconv"]

[lib]
name       = "iconv"
path       = "src/lib.rs"

[dependencies]
libc = "*"
log = "*"
